<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_wheels_driver</name>
  <version>1.0.0</version>
  <description>ODrive S1 CAN driver for motor control, encoder feedback, and diagnostics</description>
  <maintainer email="andresislas2107@gmail.com">Andres Islas</maintainer>
  <license>MIT</license>
  <url type="website">https://orzatech.com</url>
  <url type="repository">https://github.com/AndresIslas99/NavGreen</url>
  <url type="bugtracker">https://github.com/AndresIslas99/NavGreen/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
